tests/baselines/reference/primitiveTypeAsmoduleName.errors.txt
primitiveTypeAsmoduleName.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== primitiveTypeAsmoduleName.ts (1 errors) ====
    module string {}
           ~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.